# fastRankMean

./: CMakeLists.txt  check.cxx  itkFastApproxMaskRankImageFilter.h  itkFastApproxMaskRankImageFilter.txx  itkFastApproxRankImageFilter.h  itkFastApproxRankImageFilter.txx  itkMaskedExternMovingHistogramRankImageFilter.h  itkMaskedExternMovingHistogramRankImageFilter.txx  itkMaskedMovingHistogramImageFilter.h  itkMaskedMovingHistogramImageFilter.txx  itkMaskedMovingHistogramRankImageFilter.h  itkMaskedMovingHistogramRankImageFilter.txx  itkMaskedRankImageFilter.h  itkMaskedRankImageFilter.txx  itkMovingHistogramImageFilter.h  itkMovingHistogramImageFilter.txx  itkMovingHistogramRankImageFilter.h  itkMovingHistogramRankImageFilter.txx  itkMovingWindowMeanImageFilter.h  itkMovingWindowMeanImageFilter.txx  itkRankHistogram.h  itkRankHistogramMask.h  itkRankImageFilter.h  itkRankImageFilter.txx  itkSeparableImageFilter.h  itkSeparableImageFilter.txx  itkSeparableMeanImageFilter.h  itkSeparableRadiusImageFilter.h  itkSeparableRadiusImageFilter.txx  perfMeanB.cxx  perfMedian.cxx  perfMedianB.cxx  perfMedianInt.cxx  perfMedianIntB.cxx  perfMedianShort.cxx  perfMedianShortB.cxx  perf_threads.cxx  test2DCharHistMean.cxx  test2DCharHistMedian.cxx  test2DCharHistMedianMask.cxx  (+7 more)
Wrapping/: CMakeLists.txt  wrap_itkFastApproxMaskRankImageFilter.cmake  wrap_itkFastApproxRankImageFilter.cmake  wrap_itkMaskedExternMovingHistogramRankImageFilter.cmake  wrap_itkMaskedMovingHistogramRankImageFilter.cmake  wrap_itkMaskedRankImageFilter.cmake  wrap_itkMovingHistogramRankImageFilter.cmake  wrap_itkMovingWindowMeanImageFilter.cmake
article/: Article.tex  Makefile  local.bib
images/: lena_bw.tif
